// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PIconSlideLabel rendering renders PIconSlideLabel 1`] = `
<div
  class="PIconSlideLabel"
  data-label="Label"
>
  <img
    alt="fake"
    aria-label="Label"
    class="PIconSlideLabel__icon"
    data-height="32"
    data-width="32"
    src="fake/picture.png"
    style="width: 32px; height: 32px;"
  />
</div>
`;

exports[`PIconSlideLabel rendering renders PIconSlideLabel with sizes 1`] = `
<div
  class="PIconSlideLabel"
  data-label="Label"
>
  <img
    alt="fake"
    aria-label="Label"
    class="PIconSlideLabel__icon"
    data-height="12"
    data-width="12"
    src="fake/picture.png"
    style="width: 12px; height: 12px;"
  />
</div>
`;

exports[`PIconSlideLabel rendering renders linked PIconSlideLabel 1`] = `
<div
  class="PIconSlideLabel"
  data-label="Label"
>
  <a
    aria-label="Label"
    class="PIconSlideLabel__link"
    href="fake.com"
    title="Fake site"
  >
    <img
      alt="fake"
      class="PIconSlideLabel__icon"
      src="fake/picture.png"
      style="width: 32px; height: 32px;"
    />
  </a>
</div>
`;
